logo e tentativa de search bar no hero

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Barra de navegação -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="#">HomeCinema</a>
+            <a class="navbar-brand" href="#">Start Bootstrap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -36,8 +36,26 @@
 
     <!-- Introduction -->
 
-    <header >
-
+    <header class="hero sizing">
+        <div class="container">
+            <div class="row justify-content-center align-items-center g-2">
+                <div class="col-2"></div>
+                <div class="col text-center">
+                    <img src="/SIR/img/logo.png" class="img-fluid logo" alt="logo">
+                </div>
+                <div class="col-2"></div>
+            </div>
+            <div class="row justify-content-center align-items-center g-2">
+                <div class="col-3">Column</div>
+                <div class="col text-center">
+                    <div class="form-group has-search">
+                        <i class="bi bi-search"></i>
+                        <input type="text" class="form-control" placeholder="Search">
+                    </div>
+                </div>
+                <div class="col-3">Column</div>
+            </div>
+        </div>
     </header>
 
     <!-- About -->
