--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./img/logo.png">
     <title>HomeCinema </title>
 
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
@@ -21,12 +22,11 @@
                     <li class="nav-item"><a class="nav-link active" aria-current="page" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link" href="#howitworks">How It Works</a></li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                        <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">More</a>
                         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Action</a></li>
-                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                            <li><hr class="dropdown-divider" /></li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li><a class="dropdown-item" href="#features">Features</a></li>
+                            <li><a class="dropdown-item" href="#team">Team</a></li>
+                            <li><a class="dropdown-item" href="#contact">Contact</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -41,7 +41,7 @@
             <div class="row justify-content-center align-items-center g-2">
                 <div class="col-2"></div>
                 <div class="col text-center">
-                    <img src="./img/logo.png" class="img-fluid logo" alt="logo" style="width: 30px;">
+                    <img src="./img/logo.png" class="img-fluid logo" alt="logo" >
                 </div>
                 <div class="col-2"></div>
             </div>
@@ -79,6 +79,25 @@
     <!-- Team -->
 
     <section id="team">
+        <div class="container">
+            <div class="text-center text-uppercase">
+                <h1>Team Members</h1>
+            </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-5" src="./img/jota.jpg" alt="João">
+                        <h4>João Pedro Lima Rocha</h4>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="team-member">
+                        <img class="mx-auto rounded-5" src="" alt="Pinto" height="50%">
+                        <h4>Guilherme Pinto</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </section>
 
