--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body id="page-top">
         
     <!-- Barra de navegação -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
         <div class="container"> 
             <a class="navbar-brand" style="font-weight: bold;" href="#"> HomeCinema <img src="./img/logo.png" height="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -60,25 +60,25 @@
 
     <!-- About -->
 
-    <section id="about">
+    <section class="page" id="about">
 
     </section>
 
     <!-- How it Works -->
 
-    <section id="howitworks">
+    <section class="page" id="howitworks">
 
     </section>
 
     <!-- Features -->
 
-    <section id="features">
+    <section class="page" id="features">
 
     </section>
 
     <!-- Team -->
 
-    <section id="team">
+    <section class="page" id="team">
         <div class="container">
             <div class="text-center text-uppercase">
                 <h1>Team Members</h1>
@@ -103,7 +103,32 @@
 
     <!-- Contact -->
 
-    <section id="contact">
+    <section class="page" id="contact">
+        <div class="container">
+            <div class="text-center">
+                <h1 class="text-uppercase">For any doubt contact us</h1>
+            </div>
+            <form action="#" method="post">
+                <div class="row align-items-stretch ">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Name">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Email">
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" type="text" placeholder="Phone">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                                <input class="form-control" type="text" placeholder="Message">
+                        </div>
+                    </div>
+                </div>                
+            </form>
+        </div>
 
     </section>
 
