--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- About -->
 
-    <section class="page" id="about">
+    <section class="page" id="about" style="background-color: aquamarine;">
 
     </section>
 
@@ -72,7 +72,7 @@
 
     <!-- Features -->
 
-    <section class="page" id="features">
+    <section class="page" id="features" style="background-color: aquamarine;">
 
     </section>
 
@@ -103,30 +103,35 @@
 
     <!-- Contact -->
 
-    <section class="page" id="contact">
+    <section class="page" id="contact" style="background-color: aquamarine;">
         <div class="container">
             <div class="text-center">
                 <h1 class="text-uppercase">For any doubt contact us</h1>
             </div>
-            <form action="#" method="post">
-                <div class="row align-items-stretch ">
+            <form id="contactForm" style="margin-top: 5rem;">
+                <div class="row">
                     <div class="col-md-6">
-                        <div class="form-group">
+                        <div class="form">
                             <input class="form-control" type="text" placeholder="Name">
                         </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Email">
+                        <div class="form">
+                            <input class="form-control" type="email" placeholder="Email">
                         </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" placeholder="Phone">
+                        <div class="form">
+                            <input class="form-control" type="tel" placeholder="Phone">
                         </div>
                     </div>
                     <div class="col-md-6">
-                        <div class="form-group">
+                        <div class="form-message">
                                 <input class="form-control" type="text" placeholder="Message">
                         </div>
                     </div>
-                </div>                
+                </div>    
+                <div class="row" style="margin-top: 2rem;">
+                    <div class="text-center">
+                        <button class="btn btn-primary btn-xl text-uppercase "> Send Message</button>
+                    </div>
+                </div>            
             </form>
         </div>
 
