--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-rolodex" viewBox="0 0 16 16">
+        <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
+        <path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1H1Zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1V2Z"/>
+      </svg>~
 </head>
 <body id="page-top">
         
@@ -61,13 +66,49 @@
     <!-- About -->
 
     <section class="page" id="about" style="background-color: aquamarine;">
-
+        <div class="container text-center">
+            <h1>We have what you need</h1>
+            <hr class="divider">
+            <p>The "HomeCinema" is the best website for you to manage films and series.</p>
+            <p>Where you can share with other people.</p>
+        </div>
     </section>
 
     <!-- How it Works -->
 
     <section class="page" id="howitworks">
-
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <h4>Create account</h4>
+                        <p>After you create an acount you can login and manage your account</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <h4>Categorize</h4>
+                        <p>You can categorize the films and series</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <h4>Share</h4>
+                        <p>You can share with other people who are registered in the site </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <h4>Share</h4>
+                        <p>You can share with other people who are registered in the site </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Features -->
@@ -98,7 +139,6 @@
                 </div>
             </div>
         </div>
-
     </section>
 
     <!-- Contact -->
@@ -134,7 +174,6 @@
                 </div>            
             </form>
         </div>
-
     </section>
 
 
