--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-rolodex" viewBox="0 0 16 16">
-        <path d="M8 9.05a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5Z"/>
-        <path d="M1 1a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h.5a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5.5.5 0 0 1 1 0 .5.5 0 0 0 .5.5h.5a1 1 0 0 0 1-1V3a1 1 0 0 0-1-1H6.707L6 1.293A1 1 0 0 0 5.293 1H1Zm0 1h4.293L6 2.707A1 1 0 0 0 6.707 3H15v10h-.085a1.5 1.5 0 0 0-2.4-.63C11.885 11.223 10.554 10 8 10c-2.555 0-3.886 1.224-4.514 2.37a1.5 1.5 0 0 0-2.4.63H1V2Z"/>
-      </svg>~
+
 </head>
 <body id="page-top">
         
     <!-- Barra de navegação -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container"> 
             <a class="navbar-brand" style="font-weight: bold;" href="#"> HomeCinema <img src="./img/logo.png" height="30px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -41,25 +38,17 @@
 
     <!-- Introduction -->
 
-    <header class="hero sizing">
-        <div class="container">
-            <div class="row justify-content-center align-items-center g-2">
-                <div class="col-2"></div>
-                <div class="col text-center">
-                    <img src="./img/logo.png" class="img-fluid logo" alt="logo" >
-                </div>
-                <div class="col-2"></div>
+    <header class="hero">
+        <div class="container text-center">
+            <img src="./img/logo.png" class="img-fluid logo" alt="logo" >
+
+            <div class="input-group mb-3">
+                <input type="text" class="form-control search-bar" style="width: 10rem;" placeholder="Search" aria-describedby="basic-addon2">
+                <span class="input-group-text" id="basic-addon2">
+                    <i class="bi bi-search"></i>
+                </span>
             </div>
-            <div class="row justify-content-center align-items-center g-2">
-                <div class="col-3">Column</div>
-                <div class="col text-center">
-                    <div class="form-group has-search">
-                        <i class="bi bi-search"></i>
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                </div>
-                <div class="col-3">Column</div>
-            </div>
+            
         </div>
     </header>
 
