How it works feito

--- a/index.html
+++ b/index.html
@@ -77,23 +77,53 @@
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <div class="mb-2"><i class="bi-tags-fill fs-1"></i></div>
                         <h4>Categorize</h4>
                         <p>You can categorize the films and series</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
+                        <div class="mb-2"><i class="bi-share-fill fs-1"></i></div>
                         <h4>Share</h4>
                         <p>You can share with other people who are registered in the site </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
-                        <h4>Share</h4>
-                        <p>You can share with other people who are registered in the site </p>
+                        <div class="mb-2"><i class="bi-calendar2-week-fill fs-1"></i></div>
+                        <h4>Schedule</h4>
+                        <p>You can schedule when do you want to see the film/serie</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-sticky-fill fs-1"></i></div>
+                        <h4>Notes</h4>
+                        <p>You can create notes</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-search fs-1"></i></div>
+                        <h4>Search</h4>
+                        <p>You can search a filme by name or using filters</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-paperclip fs-1"></i></div>
+                        <h4>Attachments</h4>
+                        <p>You can attach fotos to the filme </p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <div class="mb-2"><i class="bi-star-fill fs-1"></i></div>
+                        <h4>Rate</h4>
+                        <p>You can rate and add comments to the films/series</p>
                     </div>
                 </div>
             </div>
