--- a/index.html
+++ b/index.html
@@ -4,20 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./img/logo.png">
-    <title>HomeCinema </title>
+    <title>HomeCinema</title>
 
     <link rel="stylesheet" type="text/css" href="./css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
 
 </head>
 <body id="page-top">
         
     <!-- Barra de navegação -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container"> 
-            <a class="navbar-brand" style="font-weight: bold;" href="#"> HomeCinema <img src="./img/logo.png" height="30px"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+        <div class="container text-uppercase"> 
+            <a class="navbar-brand d-flex align-items-center" style="font-weight: bold;" href="#"> HomeCinema <img src="./img/logo.png" height="30rem" class="ms-3"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
@@ -40,15 +39,13 @@
 
     <header class="hero">
         <div class="container text-center">
-            <img src="./img/logo.png" class="img-fluid logo" alt="logo" >
-
+            <img src="./img/logo.png" class="img-fluid" alt="logo" >
             <div class="input-group mb-3">
-                <input type="text" class="form-control search-bar" style="width: 10rem;" placeholder="Search" aria-describedby="basic-addon2">
+                <input type="text" class="form-control search-bar" placeholder="Search" aria-describedby="basic-addon2">
                 <span class="input-group-text" id="basic-addon2">
                     <i class="bi bi-search"></i>
                 </span>
             </div>
-            
         </div>
     </header>
 
@@ -71,7 +68,7 @@
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
-                        <h4>Create account</h4>
+                        <h4>Account</h4>
                         <p>After you create an acount you can login and manage your account</p>
                     </div>
                 </div>
@@ -198,6 +195,7 @@
 
 
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
 
 </body>
 </html>     
