Alteração das features e do hero

--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
                 <span class="input-group-text" id="basic-addon2">
                     <i class="bi bi-search"></i>
                 </span>
+            </div>  
+            <div class="text-white">
+                <h1>We have what you need</h1>
+                <hr class="divider">
+                <p>The "HomeCinema" is the best website for you to manage films and series.</p>
+                <p>Where you can share with other people.</p>
             </div>
         </div>
     </header>
@@ -63,6 +69,12 @@
     <!-- How it Works -->
 
     <section class="page" id="howitworks">
+
+    </section>
+
+    <!-- Features -->
+
+    <section class="page" id="features" style="background-color: aquamarine;">
         <div class="container">
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
@@ -125,12 +137,6 @@
                 </div>
             </div>
         </div>
-    </section>
-
-    <!-- Features -->
-
-    <section class="page" id="features" style="background-color: aquamarine;">
-
     </section>
 
     <!-- Team -->
