--- a/index.html
+++ b/index.html
@@ -40,11 +40,9 @@
     <header class="hero">
         <div class="container text-center">
             <img src="./img/logo.png" class="img-fluid" alt="logo" >
-            <div class="input-group mb-3">
-                <input type="text" class="form-control search-bar" placeholder="Search" aria-describedby="basic-addon2">
-                <span class="input-group-text" id="basic-addon2">
-                    <i class="bi bi-search"></i>
-                </span>
+            <div class="input-group mb-3 bar-size align-items-center">
+                <input type="text" class="form-control " placeholder="Search" aria-describedby="basic-addon2">
+                <span class="input-group-text bi-search" id="basic-addon2"></span>
             </div>  
             <div class="text-white">
                 <h1>We have what you need</h1>
