--- a/index.html
+++ b/index.html
@@ -38,23 +38,25 @@
     <!-- Introduction -->
 
     <header class="hero">
-        <div class="container text-center">
-            <img src="./img/logo.png" class="img-fluid" alt="logo" >
-            <div class="input-group mb-3 bar-size align-items-center">
-                <input type="text" class="form-control " placeholder="Search" aria-describedby="basic-addon2">
-                <span class="input-group-text bi-search" id="basic-addon2"></span>
-            </div>  
-            <div class="text-white">
-                <h1>We have what you need</h1>
-                <hr class="divider">
-                <p>The "HomeCinema" is the best website for you to manage films and series.</p>
-                <p>Where you can share with other people.</p>
+        <div class="overlay"></div>
+        <div class="container text-center align-content-center content">
+            <img src="./img/logo.png" class="img-fluid" alt="logo">
+            <div class="d-flex justify-content-center align-items-center flex-column content">
+                <div class="input-group bar-size">
+                    <input type="text" class="form-control " placeholder="Search a movie or serie..." aria-describedby="basic-addon2">
+                    <span class="input-group-text bi-search" id="basic-addon2"></span>
+                </div>  
             </div>
-        </div>
+            <hr>    
+            <div class="text-white">
+                <h1>We have what you need!</h1>
+                <hr class="divider">
+                <h5>HOMECINEMA is the best website for you to manage your movies and series.</h5>
+            </div>
+        </div>     
     </header>
 
     <!-- About -->
-
     <section class="page" id="about" style="background-color: aquamarine;">
         <div class="container text-center">
             <h1>We have what you need</h1>
@@ -79,7 +81,7 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
                         <h4>Account</h4>
-                        <p>After you create an acount you can login and manage your account</p>
+                        <p>You can manage and customise your account</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
