melhorias no css, alteração da cor de fundo e troca do texto do About

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>  
             </div>
             <hr>    
-            <div class="text-white">
+            <div class="text-white" style="padding-bottom: 10rem;">
                 <h1>We have what you need!</h1>
                 <hr class="divider">
                 <h5>HOMECINEMA is the best website for you to manage your movies and series.</h5>
@@ -57,12 +57,15 @@
     </header>
 
     <!-- About -->
-    <section class="page" id="about" style="background-color: aquamarine;">
-        <div class="container text-center">
-            <h1>We have what you need</h1>
-            <hr class="divider">
-            <p>The "HomeCinema" is the best website for you to manage films and series.</p>
-            <p>Where you can share with other people.</p>
+    <section class="page" id="about">
+        <div class="container" style="text-align: justify;">
+            <h3>
+                Welcome to HomeCinema, your hub for movies and series management! 
+                We're a passionate team dedicated to simplifying and personalizing your cinematic experience. 
+                Organize your lists, discover personalized recommendations, and connect with other enthusiasts in our active community. 
+                Our commitment is to provide a secure and innovative platform. 
+                Join us, create your account, and dive into an extraordinary cinematic journey!
+            </h3>
         </div>
     </section>
 
@@ -74,8 +77,11 @@
 
     <!-- Features -->
 
-    <section class="page" id="features" style="background-color: aquamarine;">
+    <section class="page" id="features">
         <div class="container">
+            <div class="text-center text-uppercase">
+                <h1>Features</h1>
+            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
@@ -165,13 +171,15 @@
 
     <!-- Contact -->
 
-    <section class="page" id="contact" style="background-color: aquamarine;">
+    <section class="page" id="contact" >
         <div class="container">
-            <div class="text-center">
-                <h1 class="text-uppercase">For any doubt contact us</h1>
+            <div class="text-center text-uppercase">
+                <h1>For any doubt contact us</h1>
             </div>
             <form id="contactForm" style="margin-top: 5rem;">
                 <div class="row">
+                    <div class="col-md-3">
+                    </div>
                     <div class="col-md-6">
                         <div class="form">
                             <input class="form-control" type="text" placeholder="Name">
@@ -182,15 +190,15 @@
                         <div class="form">
                             <input class="form-control" type="tel" placeholder="Phone">
                         </div>
-                    </div>
-                    <div class="col-md-6">
                         <div class="form-message">
-                                <input class="form-control" type="text" placeholder="Message">
-                        </div>
+                            <input class="form-control" type="text" placeholder="Message">
+                    </div>
+                    </div>
+                    <div class="col-md-3">
                     </div>
                 </div>    
-                <div class="row" style="margin-top: 2rem;">
-                    <div class="text-center">
+                <div class="row text-center" style="margin-top: 3rem;">
+                    <div>
                         <button class="btn btn-primary btn-xl text-uppercase "> Send Message</button>
                     </div>
                 </div>            
@@ -199,9 +207,14 @@
     </section>
 
 
+    <footer class="py-3 bg-secondary">
+        <div class="container">
+            <p class="m-0 text-center text-white">Copyright &copy; 2023 - HomeCinema</p>
+        </div>
+    </footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
-
 </body>
 </html>     
