cor de fundo e salientei o que falta fazer

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <hr class="divider">
                 <h5>HOMECINEMA is the best website for you to manage your movies and series.</h5>
             </div>
-        </div>     
-    </header>
-
+        </div>
+    </header> 
+    
     <!-- About -->
     <section class="page" id="about">
         <div class="container" style="text-align: justify;">
@@ -71,7 +71,7 @@
 
     <!-- How it Works -->
 
-    <section class="page" id="howitworks">
+    <section class="page" id="howitworks" style="background: aqua;">
 
     </section>
 
