Adicionadas breaks entre secções

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body id="page-top">
         
     <!-- Barra de navegação -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-secondary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container text-uppercase"> 
             <a class="navbar-brand d-flex align-items-center" style="font-weight: bold;" href="#"> HomeCinema <img src="./img/logo.png" height="30rem" class="ms-3"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -55,25 +55,66 @@
             </div>
         </div>
     </header> 
+
+    <div class="break">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+            <div class="col-2 text-center">
+                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            </div>
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+        </div>
+    </div>
     
     <!-- About -->
     <section class="page" id="about">
-        <div class="container" style="text-align: justify;">
-            <h3>
-                Welcome to HomeCinema, your hub for movies and series management! 
-                We're a passionate team dedicated to simplifying and personalizing your cinematic experience. 
-                Organize your lists, discover personalized recommendations, and connect with other enthusiasts in our active community. 
-                Our commitment is to provide a secure and innovative platform. 
-                Join us, create your account, and dive into an extraordinary cinematic journey!
-            </h3>
+        <div class="container text-center" style="text-align: justify; color: #ffffff;">
+            <h5>
+                <p>Welcome to HomeCinema, your hub for movies and series management!</p>
+                <p>We're a passionate team dedicated to simplifying and personalizing your cinematic experience.</p> 
+                <p>Organize your lists, discover personalized recommendations and connect with other enthusiasts in our active community.</p>
+                <p>Join us, create your account, and dive into an extraordinary cinematic journey!</p>
+            </h5>
         </div>
     </section>
+
+    <div class="break">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+            <div class="col-2 text-center">
+                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            </div>
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+        </div>
+    </div>
 
     <!-- How it Works -->
 
     <section class="page" id="howitworks" style="background: aqua;">
 
     </section>
+
+    <div class="break">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+            <div class="col-2 text-center">
+                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            </div>
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+        </div>
+    </div>
 
     <!-- Features -->
 
@@ -145,6 +186,20 @@
         </div>
     </section>
 
+    <div class="break">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+            <div class="col-2 text-center">
+                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            </div>
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+        </div>
+    </div>
+
     <!-- Team -->
 
     <section class="page" id="team">
@@ -168,6 +223,20 @@
             </div>
         </div>
     </section>
+
+    <div class="break">
+        <div class="row justify-content-center align-items-center g-2">
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+            <div class="col-2 text-center">
+                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            </div>
+            <div class="col-5">
+                <hr class="divider">
+            </div>
+        </div>
+    </div>
 
     <!-- Contact -->
 
@@ -207,7 +276,7 @@
     </section>
 
 
-    <footer class="py-3 bg-secondary">
+    <footer class="py-3 bg-dark">
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; 2023 - HomeCinema</p>
         </div>
