Estilos adicionados, descrições e team atualizada

--- a/index.html
+++ b/index.html
@@ -98,8 +98,15 @@
 
     <!-- How it Works -->
 
-    <section class="page" id="howitworks" style="background: aqua;">
-
+    <section class="page" id="howitworks">
+        <div class="container text-center" style="text-align: justify; color: #ffffff;">
+             <h5>
+                <p>It's simple!</p>
+                <p>Create an account <a href="" style="color: black;">here</a> and you are ready to go.</p> 
+                <p>Just search for the shows you are looking for, add them to your collection, categorize them </p>
+                <p>Join us, create your account, and dive into an extraordinary cinematic journey!</p>
+              </h5>
+        </div>
     </section>
 
     <div class="break">
@@ -119,7 +126,7 @@
     <!-- Features -->
 
     <section class="page" id="features">
-        <div class="container">
+        <div class="container" style="color: #ffffff;">
             <div class="text-center text-uppercase">
                 <h1>Features</h1>
             </div>
@@ -128,28 +135,28 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-person-fill fs-1"></i></div>
                         <h4>Account</h4>
-                        <p>You can manage and customise your account</p>
+                        <p>You can manage and customise your account.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-tags-fill fs-1"></i></div>
                         <h4>Categorize</h4>
-                        <p>You can categorize the films and series</p>
+                        <p>You can categorize your movies and series.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-share-fill fs-1"></i></div>
                         <h4>Share</h4>
-                        <p>You can share with other people who are registered in the site </p>
+                        <p>You can share your shows with other people, registered in the website.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-calendar2-week-fill fs-1"></i></div>
                         <h4>Schedule</h4>
-                        <p>You can schedule when do you want to see the film/serie</p>
+                        <p>You can schedule your next movie/serie watch session.</p>
                     </div>
                 </div>
             </div>
@@ -158,28 +165,28 @@
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-sticky-fill fs-1"></i></div>
                         <h4>Notes</h4>
-                        <p>You can create notes</p>
+                        <p>You can create notes.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-search fs-1"></i></div>
                         <h4>Search</h4>
-                        <p>You can search a filme by name or using filters</p>
+                        <p>You can search for a show by name or using our filters.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-paperclip fs-1"></i></div>
                         <h4>Attachments</h4>
-                        <p>You can attach fotos to the filme </p>
+                        <p>You can attach fotos to your favorite movies and series.</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <div class="mb-2"><i class="bi-star-fill fs-1"></i></div>
                         <h4>Rate</h4>
-                        <p>You can rate and add comments to the films/series</p>
+                        <p>You can rate and add comments to every show.</p>
                     </div>
                 </div>
             </div>
@@ -203,7 +210,7 @@
     <!-- Team -->
 
     <section class="page" id="team">
-        <div class="container">
+        <div class="container" style="color: #ffffff;">
             <div class="text-center text-uppercase">
                 <h1>Team Members</h1>
             </div>
@@ -216,8 +223,8 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-5" src="" alt="Pinto" height="50%">
-                        <h4>Guilherme Pinto</h4>
+                        <img class="mx-auto rounded-5" src="./img/pinto.png" alt="Pinto" height="50%">
+                        <h4>Guilherme De Sá Pinto</h4>
                     </div>
                 </div>
             </div>
@@ -241,7 +248,7 @@
     <!-- Contact -->
 
     <section class="page" id="contact" >
-        <div class="container">
+        <div class="container" style="color: #ffffff;">
             <div class="text-center text-uppercase">
                 <h1>For any doubt contact us</h1>
             </div>
@@ -257,7 +264,7 @@
                             <input class="form-control" type="email" placeholder="Email">
                         </div>
                         <div class="form">
-                            <input class="form-control" type="tel" placeholder="Phone">
+                            <input class="form-control" type="tel" placeholder="Phone Number">
                         </div>
                         <div class="form-message">
                             <input class="form-control" type="text" placeholder="Message">
@@ -268,7 +275,7 @@
                 </div>    
                 <div class="row text-center" style="margin-top: 3rem;">
                     <div>
-                        <button class="btn btn-primary btn-xl text-uppercase "> Send Message</button>
+                        <button class="btn btn-dark btn-xl text-uppercase "> Send Message</button>
                     </div>
                 </div>            
             </form>
