Team Members feito

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="team-member">
-                        <img class="mx-auto rounded-5" src="./img/pinto.png" alt="Pinto" height="50%">
+                        <img class="mx-auto rounded-5" src="./img/pinto.png" alt="Pinto">
                         <h4>Guilherme De Sá Pinto</h4>
                     </div>
                 </div>
