--- a/index.html
+++ b/index.html
@@ -103,7 +103,8 @@
              <h5>
                 <p>It's simple!</p>
                 <p>Create an account <a href="" style="color: black;">here</a> and you are ready to go.</p> 
-                <p>Just search for the shows you are looking for, add them to your collection, categorize them </p>
+                <p>Just search for the shows you are looking for, add them to your collection and you can explore 
+                    every amazing <a href="#features" style="color: black;">feature</a> available on the website.</p>
                 <p>Join us, create your account, and dive into an extraordinary cinematic journey!</p>
               </h5>
         </div>
@@ -250,7 +251,7 @@
     <section class="page" id="contact" >
         <div class="container" style="color: #ffffff;">
             <div class="text-center text-uppercase">
-                <h1>For any doubt contact us</h1>
+                <h1>Contact us!</h1>
             </div>
             <form id="contactForm" style="margin-top: 5rem;">
                 <div class="row">
@@ -288,9 +289,7 @@
             <p class="m-0 text-center text-white">Copyright &copy; 2023 - HomeCinema</p>
         </div>
     </footer>
-
-
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
 </body>
 </html>     
