--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         </div>
     </header> 
 
-    <div class="break">
+    <div class="break" id="about">
         <div class="row justify-content-center align-items-center g-2">
             <div class="col-5">
                 <hr class="divider">
             </div>
-            <div class="col-2 text-center">
-                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            <div class="col-2 text-center" style="color: #ffffff;">
+                <h2>About</h2>
             </div>
             <div class="col-5">
                 <hr class="divider">
@@ -71,7 +71,7 @@
     </div>
     
     <!-- About -->
-    <section class="page" id="about">
+    <section class="page">
         <div class="container text-center" style="text-align: justify; color: #ffffff;">
             <h5>
                 <p>Welcome to HomeCinema, your hub for movies and series management!</p>
@@ -82,13 +82,13 @@
         </div>
     </section>
 
-    <div class="break">
+    <div class="break" id="howitworks">
         <div class="row justify-content-center align-items-center g-2">
             <div class="col-5">
                 <hr class="divider">
             </div>
-            <div class="col-2 text-center">
-                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            <div class="col-2 text-center" style="color: #ffffff;">
+                <h2>How it Works</h2>
             </div>
             <div class="col-5">
                 <hr class="divider">
@@ -98,7 +98,7 @@
 
     <!-- How it Works -->
 
-    <section class="page" id="howitworks">
+    <section class="page">
         <div class="container text-center" style="text-align: justify; color: #ffffff;">
              <h5>
                 <p>It's simple!</p>
@@ -110,13 +110,13 @@
         </div>
     </section>
 
-    <div class="break">
+    <div class="break"  id="features">
         <div class="row justify-content-center align-items-center g-2">
             <div class="col-5">
                 <hr class="divider">
             </div>
-            <div class="col-2 text-center">
-                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            <div class="col-2 text-center" style="color: #ffffff;">
+                <h2>Features</h2>
             </div>
             <div class="col-5">
                 <hr class="divider">
@@ -126,11 +126,8 @@
 
     <!-- Features -->
 
-    <section class="page" id="features">
+    <section class="page">
         <div class="container" style="color: #ffffff;">
-            <div class="text-center text-uppercase">
-                <h1>Features</h1>
-            </div>
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
@@ -194,13 +191,13 @@
         </div>
     </section>
 
-    <div class="break">
+    <div class="break" id="team">
         <div class="row justify-content-center align-items-center g-2">
             <div class="col-5">
                 <hr class="divider">
             </div>
-            <div class="col-2 text-center">
-                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            <div class="col-2 text-center" style="color: #ffffff;">
+                <h2>Team Members</h2>
             </div>
             <div class="col-5">
                 <hr class="divider">
@@ -210,11 +207,8 @@
 
     <!-- Team -->
 
-    <section class="page" id="team">
+    <section class="page">
         <div class="container" style="color: #ffffff;">
-            <div class="text-center text-uppercase">
-                <h1>Team Members</h1>
-            </div>
             <div class="row">
                 <div class="col-lg-6">
                     <div class="team-member">
@@ -232,13 +226,13 @@
         </div>
     </section>
 
-    <div class="break">
+    <div class="break"  id="contact" >
         <div class="row justify-content-center align-items-center g-2">
             <div class="col-5">
                 <hr class="divider">
             </div>
-            <div class="col-2 text-center">
-                <img src="./img/logo.png" class="img-fluid resize"alt="logo">
+            <div class="col-2 text-center" style="color: #ffffff;">
+                <h2>Contact Us</h2>
             </div>
             <div class="col-5">
                 <hr class="divider">
@@ -248,11 +242,8 @@
 
     <!-- Contact -->
 
-    <section class="page" id="contact" >
+    <section class="page">
         <div class="container" style="color: #ffffff;">
-            <div class="text-center text-uppercase">
-                <h1>Contact us!</h1>
-            </div>
             <form id="contactForm" style="margin-top: 5rem;">
                 <div class="row">
                     <div class="col-md-3">
@@ -289,7 +280,7 @@
             <p class="m-0 text-center text-white">Copyright &copy; 2023 - HomeCinema</p>
         </div>
     </footer>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script> 
 </body>
 </html>     
